# boxlite

./: Cargo.toml  Makefile  package.json
.github/workflows/: README.md  _check-trigger.yml  build-node-sdk.yml  build-python-sdk.yml  build-runtime.yml  build-sdks.yml  build-wheels.yml  config.yml
boxlite/: Cargo.toml
boxlite-shared/src/: errors.rs
boxlite/src/: lib.rs
boxlite/src/db/: boxes.rs  mod.rs  schema.rs
boxlite/src/fs/: mod.rs
boxlite/src/images/: config.rs
boxlite/src/litebox/: box_impl.rs  config.rs  exec.rs  inner.rs  lifecycle.rs  manager.rs  metrics.rs  mod.rs  state.rs
boxlite/src/lock/: file.rs  memory.rs  mod.rs
boxlite/src/pipeline/: mod.rs
boxlite/src/rootfs/: builder.rs
boxlite/src/runtime/: constants.rs  core.rs  layout.rs  mod.rs  options.rs  (+2 more)
boxlite/tests/: lifecycle.rs  network.rs  runtime.rs
docs/guides/: README.md
examples/c/: execute.c
examples/node/: README.md  browserbox.js  codebox.js  computerbox.js  interactivebox.js  package.json  simplebox.js
examples/python/: README.md  lifecycle_example.py  list_boxes_example.py  llm_driven_simplebox_example.py  native_example.py  simplebox_example.py
scripts/: clean.sh
scripts/setup/: setup-macos.sh
sdks/node/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
sdks/node/lib/: browserbox.ts  codebox.ts  computerbox.ts  constants.ts  errors.ts  exec.ts  index.ts  interactivebox.ts  native.ts  simplebox.ts
sdks/node/src/: box_handle.rs  exec.rs  info.rs  lib.rs  metrics.rs  options.rs  runtime.rs  util.rs
sdks/python/: Cargo.toml  pyproject.toml
(+53 files in other folders)
